<resources>
    <string name="app_name">Bookstore</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="add">Add</string>

    <string name="profile_management">Profile Management</string>
    <string name="dateofbirth">Date of Birth</string>
    <string name="phonenumber">Phone Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="updateprofile">Update Profile</string>
    <string name="editprofile">Edit Profile</string>
    <string name="search">Search</string>
    <string name="user">User</string>
    <string name="author">Author</string>
    <string name="edit">Edit</string>
    <string name="type">Type</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="bookstore_logo_text">BookStoRe</string>
    <string name="is_required">is required</string>
    <string name="book_id">Book ID</string>
    <string name="price">Price</string>
    <string name="admin_panel">ADMIN PANEL</string>
    <string name="insert">INSERT</string>
    <string name="book_category">Book Category</string>
    <string name="chapters">CHAPTERS</string>
    <string name="update">UPDATE</string>
    <string name="search_by_book_name">Search by book name</string>
    <string name="book_name">Book Name</string>
    <string name="image">image</string>
    <string name="inventory">inventory</string>
    <string name="read">Read</string>
    <string name="sell">Sell</string>
    <string name="read1">ReAd</string>
    <string name="buy">BuY</string>
    <string name="bookstore">BookStOrE</string>
    <string name="please_confirm_your_delivery_details">Please confirm your Delivery Details</string>
    <string name="your_name">Your Name</string>
    <string name="your_delivery_address">Your Delivery Address</string>
    <string name="your_phone_number">Your Phone Number</string>
    <string name="please_confirm_your_card_details">Please confirm your card Details</string>
    <string name="name_on_card">Name on Card</string>
    <string name="card_number">Card Number</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="cvv_code">CVV Code</string>
    <string name="card_type">Card Type</string>
    <string name="confirm">Confirm</string>
    <string name="please_confirm_your_details">Please confirm your Details</string>
    <string name="result">Result</string>
    <string name="delete">Delete</string>
    <string name="book_details">Book details</string>
    <string name="delivery_details">Delivery details</string>
    <string name="receiver_name">Receiver name</string>
    <string name="receiver_address">Receiver address</string>
    <string name="receiver_phone">Receiver phone number</string>
    <string name="card_details">Card details</string>
    <string name="publisher">Publisher</string>
    <string name="contact">Contact number</string>
    <string name="author_details">Author details</string>
    <string name="book_type">Book type</string>
    <string name="unit_price">Unit price</string>
    <string name="book_language">Language</string>
    <string name="successfully_ordered">Successfully ordered!</string>
    <string name="home">Home</string>
    <string name="your_book_will_be_published_in_our_application_within_3_days_if_it_got_the_admin_approval_thank_you">Your book will be Published in our application within 3 days if it got the admin approval.Thank you!</string>
    <string name="book_deliver">You will receive the book within 3 days. Thank you for your order</string>
    <string name="the_form_has_been_submitted_successfully">The Form has been submitted successfully!!!</string>
    <string name="order_success">The order has been submitted successfully!!!</string>
    <string name="you_can_sell_your_own_books_in_our_app_with_an_interesting_payment">You can sell your own books in our app with an interesting payment !!!</string>
    <string name="next">Next</string>

</resources>