<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/abc5"
    tools:context=".ProfileManagement">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/profile_management"
        android:textAlignment="center"
        android:textColor="#22374C"
        android:textSize="36sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/namepm"
        android:textColorHint="#FFFFFF"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName" />

    <EditText
        android:textColorHint="#FFFFFF"
        android:layout_marginTop="3dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/text1"
        android:id="@+id/datepm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dateofbirth"
        android:inputType="date" />

    <EditText
        android:textColorHint="#FFFFFF"
        android:layout_marginTop="3dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/text1"
        android:id="@+id/addresspm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/address"
        android:inputType="textPersonName" />

    <EditText
        android:textColorHint="#FFFFFF"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/text1"
        android:id="@+id/Phonepm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/phonenumber"
        android:inputType="phone" />

    <EditText
        android:textColorHint="#FFFFFF"
        android:layout_marginTop="3dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/text1"
        android:id="@+id/passwordpm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:textColorHint="#FFFFFF"
        android:layout_marginTop="3dp"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:background="@drawable/text1"
        android:id="@+id/emailpm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type" />

        <RadioButton
            android:id="@+id/radioButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:checked="true"
            android:text="@string/user" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:text="@string/author" />
    </RadioGroup>

    <Button
        android:id="@+id/addpm"
        android:background="@drawable/btncolor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add" />

    <Button
        android:background="@drawable/btncolor"
        android:layout_marginTop="15dp"
        android:id="@+id/updatepm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/updateprofile" />

</LinearLayout>