<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:background="@drawable/abc1"
    tools:context=".Payment2">
    <TextView
        android:id="@+id/txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/please_confirm_your_details"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/book_details"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:textSize="22sp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/book_name"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:hint="@string/book_name" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:id="@+id/book_author"
                android:layout_marginTop="10dp"
                android:hint="@string/author" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/book_category"
                android:layout_marginTop="10dp"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:hint="@string/book_category" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/book_price"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:layout_marginTop="10dp"
                android:hint="@string/price" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivery_details"
                android:textAlignment="center"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:layout_marginTop="20dp"
                android:textSize="22sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/receiver_name"
                android:hint="@string/receiver_name"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:layout_marginTop="10dp"
                android:inputType="text" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/receiver_address"
                android:hint="@string/receiver_address"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:layout_marginTop="10dp"
                android:inputType="textPostalAddress" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:id="@+id/receiver_phone"
                android:hint="@string/receiver_phone"
                android:layout_marginTop="10dp"
                android:inputType="phone" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:text="@string/card_details"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_marginTop="20dp"
                android:textSize="22sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_name"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:hint="@string/name_on_card"
                android:layout_marginTop="10dp"
                android:inputType="textPersonName" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_number"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:hint="@string/card_number"
                android:layout_marginTop="10dp"
                android:inputType="number" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:id="@+id/card_exp_date"
                android:hint="@string/expiration_date"
                android:layout_marginTop="10dp"
                android:inputType="date" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_cvv"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:hint="@string/cvv_code"
                android:layout_marginTop="10dp"
                android:inputType="number" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/card_type"
                android:hint="@string/card_type"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:inputType="text" />
        </LinearLayout>
    </ScrollView>
    <Button
        android:id="@+id/confirmBtnn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/UpdateBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/update"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/DeleteBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/delete"
        android:textColor="@android:color/white"
        android:layout_marginBottom="30dp"
        android:textSize="20sp" />
</LinearLayout>
