<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backnew1"
    tools:context=".Payment">

    <TextView
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="27dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:text="@string/please_confirm_your_delivery_details"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/payment_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="1dp"
        android:layout_marginRight="20dp"
        android:hint="@string/your_name"
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <EditText
        android:id="@+id/payment_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/payment_name"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="-9dp"
        android:layout_marginRight="20dp"
        android:hint="@string/your_phone_number"
        android:inputType="phone"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <EditText
        android:id="@+id/addressEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/payment_phone"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="2dp"
        android:layout_marginRight="20dp"
        android:hint="@string/your_delivery_address"
        android:inputType="textPostalAddress"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <TextView
        android:id="@+id/txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="4dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/please_confirm_your_card_details"
        android:textAlignment="center"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/holderEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="231dp"
        android:layout_marginRight="20dp"
        android:hint="@string/name_on_card"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <EditText
        android:id="@+id/numberEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/holderEt"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="20dp"
        android:hint="@string/card_number"
        android:inputType="number"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <EditText
        android:id="@+id/expireEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/numberEt"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:hint="@string/expiration_date"
        android:inputType="date"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <EditText
        android:id="@+id/cvvEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/expireEt"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="20dp"
        android:hint="@string/cvv_code"
        android:inputType="number"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <EditText
        android:id="@+id/typeEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cvvEt"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="11dp"
        android:layout_marginRight="20dp"
        android:hint="@string/card_type"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black" />

    <Button
        android:id="@+id/saveBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/confirm"
        android:textColor="@android:color/white"
        android:textSize="20sp" />


</RelativeLayout>